final_changes_commit

--- a/frontend/src/app/Features/dashboard/dashboard.component.html
+++ b/frontend/src/app/Features/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
+
+<div class="contain-body">
 <div class="dashboard-container">
   <div class="animated-bg">
   <!-- Carousel Section -->
@@ -20,7 +22,7 @@
   <div class="cards-container mt-5">
     <div class="row">
       <div class="col-md-4 mb-4">
-        <div class="card shadow-sm card-animate" style="background-color: #FFB74D;">
+        <div class="card shadow-sm card-animate">
           <div class="card-body text-center">
             <h5 class="card-title">Optimize Recycling Collection</h5>
             <p class="card-text">Efficiently manage your recycling collection schedules and routes.</p>
@@ -29,7 +31,7 @@
         </div>
       </div>
       <div class="col-md-4 mb-4">
-        <div class="card shadow-sm card-animate" style="background-color: #4DB6AC;">
+        <div class="card shadow-sm card-animate" >
           <div class="card-body text-center">
             <h5 class="card-title">Boost Recycling Sales</h5>
             <p class="card-text">Track and maximize your revenue from recycled materials.</p>
@@ -38,7 +40,7 @@
         </div>
       </div>
       <div class="col-md-4 mb-4">
-        <div class="card shadow-sm card-animate" style="background-color: #7986CB;">
+        <div class="card shadow-sm card-animate" >
           <div class="card-body text-center">
             <h5 class="card-title">Control Landfill Costs</h5>
             <p class="card-text">Effectively monitor and reduce landfill expenses.</p>
@@ -48,5 +50,6 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 </div>
