--- a/frontend/src/app/Features/reports/reports.component.html
+++ b/frontend/src/app/Features/reports/reports.component.html
@@ -1,1 +1,11 @@
-<iframe title="rcyling" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=29ceb3bd-004b-41d0-905e-197e56912082&autoAuth=true&embeddedDemo=true" frameborder="0" allowFullScreen="true"></iframe>
+<div class="report-container">
+    <div class="animated-background"></div> <!-- Animated background layer -->
+    <div class="table-wrapper">
+      <!-- Embedded report content -->
+      <iframe title="Recycling Report" 
+        src="https://app.powerbi.com/reportEmbed?reportId=9101c465-8273-4caa-b87a-f6c466a0a90f&appId=25418859-daff-4471-abb5-d9afccd12f72&autoAuth=true&ctid=498d20b8-3f6d-4195-ab21-c4f8091a3624" 
+        allowFullScreen="true">
+      </iframe>
+    </div>
+  </div>
+  
