--- a/frontend/src/app/Features/manage-users/manage-users.component.html
+++ b/frontend/src/app/Features/manage-users/manage-users.component.html
@@ -22,6 +22,11 @@
       <td mat-cell *matCellDef="let user"> {{user.university}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="role">
+      <th mat-header-cell *matHeaderCellDef> Role </th>
+      <td mat-cell *matCellDef="let user"> {{user.role}} </td>
+    </ng-container>
+
     <!-- Status Column -->
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef> Status </th>
@@ -46,7 +51,8 @@
     </ng-container>
 
     <!-- Header and Row Declarations -->
-    <tr mat-header-row *matHeaderRowDef="['name', 'contact', 'university', 'status', 'actions']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['name', 'contact', 'university', 'status', 'actions'];"></tr>
+
+<tr mat-header-row *matHeaderRowDef="['name', 'contact', 'university', 'role', 'status', 'actions']"></tr>
+<tr mat-row *matRowDef="let row; columns: ['name', 'contact', 'university', 'role', 'status', 'actions'];"></tr>
   </table>
 </div>
