--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-nav *ngIf="this.currenturl!='/' && this.currenturl!='/auth/login' && this.currenturl!='/auth/changepassword'"></app-nav>
+<app-nav *ngIf="this.currenturl!='/' && this.currenturl!='/auth/login' && this.currenturl!='/auth/changepassword'  && this.currenturl!='/dashboard/homepage'"></app-nav>
 <app-loader></app-loader>
 <router-outlet class="body"></router-outlet>
 
