--- a/frontend/src/app/Features/dashboard/dashboard.component.html
+++ b/frontend/src/app/Features/dashboard/dashboard.component.html
@@ -26,7 +26,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Optimize Recycling Collection</h5>
             <p class="card-text">Efficiently manage your recycling collection schedules and routes.</p>
-            <button class="btn btn-outline-light w-100" (click)="openRecyclingCollectionForm()">Set-up Now</button>
+            <button class="btn btn-outline-light w-100" (click)="openRecyclingCollectionForm()">Enter Now</button>
           </div>
         </div>
       </div>
@@ -35,7 +35,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Boost Recycling Sales</h5>
             <p class="card-text">Track and maximize your revenue from recycled materials.</p>
-            <button class="btn btn-outline-light w-100" (click)="openRecyclingRevenueForm()">Set-up Now</button>
+            <button class="btn btn-outline-light w-100" (click)="openRecyclingRevenueForm()">Enter Now</button>
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Control Landfill Costs</h5>
             <p class="card-text">Effectively monitor and reduce landfill expenses.</p>
-            <button class="btn btn-outline-light w-100" (click)="openLandfillExpenseForm()">Set-up Now</button>
+            <button class="btn btn-outline-light w-100" (click)="openLandfillExpenseForm()">Enter Now</button>
           </div>
         </div>
       </div>
