final changes commit

--- a/frontend/src/app/shared/nav/nav.component.html
+++ b/frontend/src/app/shared/nav/nav.component.html
@@ -28,6 +28,11 @@
        routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
        About Us
     </a>
+
+    <a routerLink="/dashboard/DataSpce" class="navbar-item" 
+    routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+    Data Space
+ </a>
 </div>
 
 
